src/assets/css/staticphp.css
*,
*::before,
*::after
{
    box-sizing: border-box;
}

html,
body
{
    margin: 0;
    padding: 0;
    background-color: #eeeeee;
    font-family: Helvetica, Arial, sans-serif;
}

.container
{
    max-width: 80rem;
    margin: 0 auto;
    padding: 1rem;
}

img
{
    max-width: 100%;
}

#staticphp_nav_toggle_label
{
    display: block;
    padding: 1rem;
    cursor: pointer;
}

#staticphp_nav_toggle
{
    display: none;
}

#staticphp_nav_toggle ~ .staticphp .header nav
{
    display: none;
}

#staticphp_nav_toggle:checked ~ .staticphp .header nav
{
    display: flex;
}

.staticphp a
{
    color: #475284;
    font-weight: 600;
}

.staticphp .header
{
    background-color: #4F5B93;
    color: #ffffff;
    text-align: center;
}

.staticphp .footer
{
    font-size: 0.8rem;
    background-color: #475284;
    color: #ccc;
}

.staticphp .footer a
{
    color: #fff;
}

.staticphp .header .container
{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    padding: 0;
}

.staticphp .header a
{
    color: #ffffff;
    text-decoration: none;
}

.staticphp .header .title
{
    font-size: 2rem;
    font-weight: bold;
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.staticphp .header .title a
{
    padding: 1rem;
    display: block;
}

.staticphp .header nav
{
    font-size: 1rem;
    display: flex;
    flex-direction: column;
    width: 100%;
}

.staticphp .header nav a
{
    display: block;
    padding: 1.5rem 1rem;
}

.staticphp .header a:hover,
.staticphp .header a.current
{
    background-color: #475284;
}

.staticphp .header .title .nothing,
.staticphp .docs .mobile-nav-header .nothing
{
    width: 3rem;
}

.staticphp .hero
{
    padding: 1rem;
}

.staticphp section.features,
.staticphp section.howitworks
{
    padding: 4rem 1rem;
}

.staticphp .hero.home
{
    background-color: #4F5B93;
    color: #ffffff;
}

.staticphp .hero .heading
{
    font-size: 4rem;
    font-weight: bold;
    margin-top: 2rem;
}

.staticphp .hero .text
{
    font-size: 1.4rem;
    margin-top: 2rem;
    line-height: 1.7;
}

.staticphp .hero .buttons
{
    display: flex;
    gap: 1rem;
    margin-top: 3rem;
    flex-direction: column;
}

.staticphp .hero .buttons a
{
    padding: 1rem 2rem;
    border-radius: 0.8rem;
    font-size: 1.2rem;
    border: 0.2rem solid #475284;
    color: #ffffff;
    text-decoration: none;
    font-weight: bold;
}

.staticphp .hero .buttons a:hover
{
    border-color: #39426b;
}

.staticphp .hero .buttons .primary
{
    background-color: #475284;
}

.staticphp .hero .buttons .primary:hover
{
    background-color: #39426b;
}

.staticphp section.features .heading,
.staticphp section.howitworks .heading
{
    font-size: 2.3rem;
    font-weight: bold;
    text-align: center;
    margin-bottom: 2rem;
}

.staticphp section.features .features,
.staticphp section.howitworks .facts
{
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;
}

.staticphp section.features
{
    background-color: #ffffff;
}

.staticphp section.features .features .feature,
.staticphp section.howitworks .facts .fact
{
    width: 100%;
    padding: 3rem 1rem;
    text-align: center;
}

.staticphp section.features .features .feature .title,
.staticphp section.howitworks .facts .fact .title
{
    font-size: 1.4rem;
    font-weight: bold;
    margin-bottom: 2rem;
}

.staticphp .docs
{
    background-color: #ffffff;
}

.staticphp .docs .container
{
    display: flex;
    flex-direction: column;
    padding: 0;
}

.staticphp .docs nav
{
    background-color: #eee;
    padding: 1rem 0;
    padding-left: 1rem;
    padding-right: 1rem;
}

.staticphp .docs nav a
{
    padding: 1rem;
    text-decoration: none;
    color: #000;
    display: block;
    border-radius: 0.5rem;
}

.staticphp .docs nav a:hover
{
    background-color: #dddddd;
}

.staticphp .docs nav a.current
{
    background-color: #ffffff;
    border: 4px inset #ffffff;
    border-right-width: 0;
}

.staticphp .content
{
    padding: 0 1rem;
    line-height: 1.6;
}

.staticphp code
{
    background-color: #eee;
    padding: 0.3rem;
    border-radius: 0.5rem;
}

.staticphp pre
{
    background-color: #eee;
    overflow-x: auto;
    padding: 0.3rem 1rem;
    margin: 0 -1rem;
}

.staticphp .mobile-nav-header
{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-size: 1.3rem;
    background-color: #eee;
}

.staticphp .mobile-nav-header a
{
    text-decoration: none;
    color: #000;
}

.staticphp .mobile-nav-header #staticphp_docs_nav_toggle_label
{
    font-size: 2rem;
    padding: 0.5rem 1rem;
    cursor: pointer;
}

.staticphp .mobile-nav-header p
{
    margin: 0;
    padding: 1rem;
}

#staticphp_docs_nav_toggle ~ .docs nav
{
    display: none;
}

#staticphp_docs_nav_toggle:checked ~ .docs nav
{
    display: block;
}

#staticphp_docs_nav_toggle:checked ~ .docs .mobile-nav-header
{
    background-color: #dddddd;
}

#staticphp_docs_nav_toggle
{
    display: none;
}

.staticphp .downloads
{
    padding-bottom: 4rem;
}

.staticphp .downloads .container
{
    display: flex;
    gap: 2rem;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
}

.staticphp .downloads .download
{
    background-color: #ffffff;
    padding: 2em;
    width: 100%;
    text-align: center;
    border-radius: 1em;
}

.staticphp .downloads .download.highlight
{
    font-size: 1.2rem;
}

.staticphp .downloads .download .title
{
    font-size: 1.4em;
    font-weight: bold;
}

.staticphp .downloads .download .buttons
{
    display: flex;
    flex-direction: column;
    gap: 1rem
}

.staticphp .downloads .download .buttons a
{
    width: 100%;
    padding: 0.6em 2em;
    border-radius: 0.6em;
    background-color: #666;
    color: #ffffff;
    text-decoration: none;
}

.staticphp .downloads .download .buttons a:hover
{
    background-color: #777;
}

.staticphp .downloads .download .buttons a.primary
{
    background-color: #4F5B93;
}

.staticphp .downloads .download .buttons a.primary:hover
{
    background-color: #39426b;
}

.staticphp .downloads .download ul
{
    list-style: none;
    margin: 0;
    padding: 1em 0;
}

.staticphp .downloads .download li
{
    padding: 1em;
}

@media ( min-width: 800px )
{
    #staticphp_nav_toggle_label
    {
        display: none;
    }

    #staticphp_nav_toggle ~ .staticphp .header nav,
    #staticphp_nav_toggle:checked ~ .staticphp .header nav
    {
        display: flex;
    }

    .staticphp .header .container
    {
        flex-direction: row;
    }

    .staticphp .header .title
    {
        width: max-content;
    }

    .staticphp .header nav
    {
        flex-direction: row;
        width: max-content;
    }

    .staticphp .hero
    {
        padding: 4rem 1rem;
    }

    .staticphp .hero .buttons
    {
        flex-direction: row;
    }

    .staticphp section.features .features,
    .staticphp section.howitworks .facts
    {
        flex-direction: row;
    }

    .staticphp section.features .features .feature,
    .staticphp section.howitworks .facts .fact
    {
        width: 33.33333333333333%;
    }

    .staticphp .docs .container
    {
        flex-direction: row;
    }

    .staticphp .docs nav
    {
        width: 20%;
        padding-right: 0;
    }

    .staticphp .docs .content
    {
        width: 80%;
        padding: 2rem 2rem;
    }

    .staticphp .docs .content h2
    {
        margin: 0;
    }

    .staticphp .docs nav a
    {
        border-radius: 0.5rem;
        margin-right: 1rem;
    }

    .staticphp .docs nav a.current
    {
        margin-right: 0;
        border-radius: 0.5rem 0rem 0rem 0.5rem;
    }

    .staticphp pre
    {
        margin: 0 -0.7rem;
        padding: 0.3rem 0.7rem;
        border-radius: 0.5rem;
    }

    .mobile-nav-header
    {
        display: none;
    }

    #staticphp_docs_nav_toggle ~ .docs nav,
    #staticphp_docs_nav_toggle:checked ~ .docs nav
    {
        display: block;
    }

    .staticphp .docs .mobile-nav-header
    {
        display: none;
    }

    .staticphp .downloads .container
    {
        flex-direction: row;
    }

    .staticphp .downloads .download.highlight
    {
        width: 55%;
    }

    .staticphp .downloads .download
    {
        width: 45%;
    }

    .staticphp .downloads .download .buttons
    {
        flex-direction: row;
    }

    .staticphp .downloads .download .buttons a
    {
        width: 50%;
    }
}

@media ( prefers-color-scheme: dark )
{
    html,
    body
    {
        background-color: #333;
        color: #ccc;
    }

    .staticphp a
    {
        color: #fff;
    }

    .staticphp section.features
    {
        background-color: #222;
    }

    .staticphp .docs
    {
        background-color: #333;
    }

    .staticphp code,
    .staticphp pre
    {
        background-color: #222;
        color: #fff;
    }

    .staticphp .docs nav
    {
        background-color: #222;
    }

    .staticphp .docs nav a
    {
        color: #ffffff;
    }

    .staticphp .docs nav a:hover
    {
        background-color: #444;
    }

    .staticphp .docs nav a.current
    {
        background-color: #333;
        border-color: #222;
    }

    .staticphp .downloads .download
    {
        background-color: #222;
    }
}

